syntax = "proto3";

package v1.post;

option go_package = "github.com/dojinkimm/go-grpc-example/protos/v1/post";

service Post {
    rpc ListPostsByUserId(ListPostsByUserIdRequest) returns (ListPostsByUserIdResponse);
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
}

message PostMessage {
    string post_id = 1;
    string author = 2;
    string title = 3;
    string body = 4;
    repeated string tags = 5;
}

message ListPostsByUserIdRequest {
    string user_id = 1;
}


message ListPostsByUserIdResponse {
    repeated PostMessage post_messages = 1;
}

message ListPostsRequest{}

message ListPostsResponse {
    repeated PostMessage post_messages = 1;
}